--- a/HRM/Pages/Index.razor
+++ b/HRM/Pages/Index.razor
@@ -17,6 +17,6 @@ Welcome to your new app.
 
     protected override void OnInitialized()
     {
-        acc = c.Accounts.FirstOrDefault().AccountEmployee.ToString();
+        acc = c.Accounts.FirstOrDefault().AccountEmployee;
     }
 }
