create UI add employee page

--- a/HRM/Shared/MainLayout.razor
+++ b/HRM/Shared/MainLayout.razor
@@ -1,17 +1,16 @@
 ﻿@inherits LayoutComponentBase
+@using MudBlazor
 
-<div class="page">
+<div class="page" style="background-color: #dfffff">
     <div class="sidebar">
         <NavMenu />
     </div>
-
-    <div class="main">
-        <div class="top-row px-4">
-            <a href="https://docs.microsoft.com/aspnet/" target="_blank">About</a>
-        </div>
-
-        <div class="content px-4">
+    <MudThemeProvider />
+    <MudDialogProvider />
+    <MudSnackbarProvider />
+    <MudLayout>
+        <MudMainContent>
             @Body
-        </div>
-    </div>
+        </MudMainContent>
+    </MudLayout>
 </div>
