--- a/HRM/Pages/Index.razor
+++ b/HRM/Pages/Index.razor
@@ -12,11 +12,11 @@ Welcome to your new app.
 
 
 @code{
-    string acc;
-    HRMContext c = new HRMContext();
+    string acc = "hihi";
+   
 
     protected override void OnInitialized()
     {
-        acc = c.Accounts.FirstOrDefault().AccountEmployee;
+        //acc = c.Accounts.FirstOrDefault().AccountEmployee;
     }
 }
