Finish task Create Configure Information

--- a/HRM/Shared/MainLayout.razor
+++ b/HRM/Shared/MainLayout.razor
@@ -2,7 +2,7 @@
 @using MudBlazor
 
 <div class="page" style="background-color: #dfffff">
-    <div class="sidebar">
+    <div class="sidebar" style="background-color: #00ffff">
         <NavMenu />
     </div>
     <MudThemeProvider />
