--- a/HRM/_Imports.razor
+++ b/HRM/_Imports.razor
@@ -8,3 +8,8 @@
 @using Microsoft.JSInterop
 @using HRM
 @using HRM.Shared
+@using MudBlazor
+@using MudBlazor.Dialog
+@using HRM.Services
+@using HRM.Models
+@using HRM.Components
