--- a/HRM/Components/Personel/EmployeeGridTable.razor
+++ b/HRM/Components/Personel/EmployeeGridTable.razor
@@ -18,7 +18,9 @@
             Thêm nhân viên
         </MudLink>
         <MudSpacer />
-        <MudTextField @bind-Value="_searchStr" Placeholder="Search" Adornment="Adornment.Start" AdornmentIcon="@Icons.Material.Filled.Search" IconSize="Size.Medium" Class="mt-0"></MudTextField>
+        <MudTextField @bind-Value="_searchStr" Placeholder="Search" Adornment="Adornment.Start" 
+                      AdornmentIcon="@Icons.Material.Filled.Search" IconSize="Size.Medium"
+                      Class="mt-0"></MudTextField>
     </ToolBarContent>
     <HeaderContent>
         <MudTh>Email</MudTh>
