--- a/HRM/Components/Personel/Profile/ProfileEmployee.razor
+++ b/HRM/Components/Personel/Profile/ProfileEmployee.razor
@@ -6,6 +6,7 @@
 @inject EmployeeService EmployeeService
 @inject DepartmentService DepartmentService
 @inject PositionService PositionService
+@inject IDialogService Dialog
 
 <MudGrid Justify="Justify.Center">
     <MudItem xs="3">
@@ -17,32 +18,135 @@
             <MudText Typo="Typo.h4" Inline="false">@_employee.Name</MudText>
             <MudText Typo="Typo.subtitle1" Inline="false">@_employee.Email</MudText>
             <div class="my-3">
-                <MudButton Color="Color.Success"
-                           Variant="Variant.Filled"
-                           EndIcon="@Icons.Material.Filled.Edit">
-                    Sửa thông tin
-                </MudButton>
+                @if (_isEdit == false)
+                {
+                    <MudButton OnClick="OnEditEmployee"
+                               Color="Color.Success"
+                               Variant="Variant.Filled"
+                               EndIcon="@Icons.Material.Filled.Edit">
+                        Sửa thông tin
+                    </MudButton>
+                }
+                else
+                {
+                    <MudButton OnClick="OnCancelEdit"
+                               Color="Color.Error"
+                               Variant="Variant.Filled"
+                               EndIcon="@Icons.Material.Filled.Cancel">
+                        Hủy
+                    </MudButton>
+                    <MudButton OnClick="OnSaveEdit"
+                               Color="Color.Success"
+                               Variant="Variant.Filled"
+                               EndIcon="@Icons.Material.Filled.Save">
+                        Lưu
+                    </MudButton>
+                }
             </div>
         </MudPaper>
     </MudItem>
+    
     <MudItem xs="8">
         <MudPaper Class="py-8">
-            <MudGrid>
-                <MudItem xs="6" Class="p-5">
-                    <p style="font-size:20px">Chức vụ: @_position.Name</p>
-                    <p style="font-size:20px">ngày sinh: @GetDate(_employee.Birth.ToString())</p>
-                    <p style="font-size:20px">Giới tính: @_employee.Gender</p>
-                </MudItem>
-                <MudItem xs="6" Class="p-5">
-                    <p style="font-size:20px">Phòng ban: @_department.Name</p>
-                    <p style="font-size:20px">Tuổi: @GetAge(_employee.Birth.ToString())</p>
-                    <p style="font-size:20px">Số diện thoại: 0@_employee.PhoneNumber</p>
-                </MudItem>
-                <MudItem xs="12" Class="p-5">
-                    <p style="font-size:30px; font-weight:bold">Mô tả</p>
-                    <p style="font-size:20px">@_employee.Description</p>
-                </MudItem>
-            </MudGrid>
+            @if (_isEdit == false)
+            {
+                <MudGrid>
+                    <MudItem xs="6" Class="p-5">
+                        <p style="font-size:20px">Chức vụ: @_position.Name</p>
+                        <p style="font-size:20px">ngày sinh: @GetDate(_employee.Birth.ToString())</p>
+                        <p style="font-size:20px">Giới tính: @_employee.Gender</p>
+                    </MudItem>
+                    <MudItem xs="6" Class="p-5">
+                        <p style="font-size:20px">Phòng ban: @_department.Name</p>
+                        <p style="font-size:20px">Tuổi: @GetAge(_employee.Birth.ToString())</p>
+                        <p style="font-size:20px">Số diện thoại: 0@_employee.PhoneNumber</p>
+                    </MudItem>
+                    <MudItem xs="12" Class="p-5">
+                        <p style="font-size:30px; font-weight:bold">Mô tả</p>
+                        <p style="font-size:20px">@_employee.Description</p>
+                    </MudItem>
+                </MudGrid>
+            }
+            else
+            {
+                <MudGrid Class="px-2">
+                    <MudItem xs="6">
+                        <MudText>Thông tin cơ bản</MudText>
+                        <MudTextField Variant="Variant.Outlined" Label="Họ tên nhân viên"
+                                      @bind-Value="_employeeEdit.Name" Required="true"
+                                      RequiredError="Không được để trống họ tên"
+                                      Class="my-2" />
+
+                        <MudTextField Variant="Variant.Outlined" Label="Email"
+                                      @bind-Value="_employeeEdit.Email" Required="true"
+                                      RequiredError="Không được để trống email"
+                                      Class="my-2" />
+
+                        <MudDatePicker @bind-Date="_employeeEdit.Birth"
+                                       PickerVariant="PickerVariant.Dialog"
+                                       Variant="Variant.Outlined"
+                                       Label="Ngày sinh"
+                                       TitleDateFormat="dd/MM/yyyy"
+                                       DateFormat="dd/MM/yyyy"
+                                       MaxDate="@DateTime.Now"
+                                       Required="true"
+                                       RequiredError="Không được để trống ngày sinh"
+                                       Class="my-2" />
+                        <div Class="my-2">
+                            <MudText>Giới tính</MudText>
+                            <MudRadioGroup @bind-SelectedOption="_employeeEdit.Gender" Required="true"
+                                           RequiredError="Không được để trống giới tính">
+                                <MudRadio Option="@("nam")" Color="Color.Primary" Dense="true">Nam</MudRadio>
+                                <MudRadio Option="@("nữ")" Color="Color.Secondary" Dense="false">Nữ</MudRadio>
+                            </MudRadioGroup>
+                        </div>
+
+                        <MudTextField @bind-Value="_employeeEdit.PhoneNumber"
+                                      Variant="Variant.Outlined"
+                                      Label="Số điện thoại"
+                                      Adornment="Adornment.None"
+                                      Required="true"
+                                      RequiredError="Không được để trống số điện thoại"
+                                      Class="my-2" />
+
+                        <MudTextField @bind-Value="_employeeEdit.Description"
+                                      T="string" Label="Mô tả"
+                                      Variant="Variant.Outlined"
+                                      Lines="4"
+                                      Class="my-2" />
+                    </MudItem>
+                    <MudItem xs="6">
+                        <MudText Color="Color.Error">Thông tin quan trọng</MudText>
+                        <MudSelect @bind-Value="@_employeeEdit.DepartmentId"
+                                   T="int?"
+                                   Label="Phòng ban" Strict="true"
+                                   Variant="Variant.Outlined"
+                                   AnchorOrigin="Origin.BottomCenter"
+                                   Required="true"
+                                   RequiredError="Không được để trống phòng ban"
+                                   Class="my-2">
+                            @foreach (var department in _listDepartments)
+                            {
+                                <MudSelectItem T="int?" Value="@department.DepartmentId">@department.Name</MudSelectItem>
+                            }
+                        </MudSelect>
+
+                        <MudSelect @bind-Value="_employeeEdit.PositionId"
+                                   T="int?"
+                                   Label="Chức vụ" Strict="true"
+                                   Variant="Variant.Outlined"
+                                   AnchorOrigin="Origin.BottomCenter"
+                                   Required="true"
+                                   RequiredError="Không được để trống chức vụ"
+                                   Class="my-2">
+                            @foreach (var position in _listPositions)
+                            {
+                                <MudSelectItem T="int?" Value="@position.PositionId">@position.Name</MudSelectItem>
+                            }
+                        </MudSelect>
+                    </MudItem>
+                </MudGrid>
+            }
         </MudPaper>
     </MudItem>
 </MudGrid>
@@ -50,13 +154,41 @@
 @code {
     [Parameter] public int EmployeeId { get; set; }
     private Employee _employee;
+    private Employee _employeeEdit;
     private Models.Position _position;
     private Department _department;
+    private bool _isEdit = false;
+    private List<Models.Position> _listPositions;
+    private List<Department> _listDepartments;
 
     protected override void OnInitialized()
     {
         base.OnInitialized();
 
+        _employee = EmployeeService.GetEmployee(EmployeeId);
+        _position = PositionService.GetPosition((int)_employee.PositionId);
+        _department = DepartmentService.GetDepartment((int)_employee.DepartmentId);
+        _listDepartments = DepartmentService.GetAllDepartments();
+        _listPositions = PositionService.GetAllPositions();
+    }
+
+    void OnEditEmployee()
+    {
+        _employeeEdit = EmployeeService.GetEmployee(EmployeeId);
+        _isEdit = true;
+    }
+
+    async Task OnCancelEdit()
+    {
+        await InvokeAsync(StateHasChanged);
+        _isEdit = false;
+    }
+
+    async Task OnSaveEdit()
+    {
+        _isEdit = false;
+        await InvokeAsync(StateHasChanged);
+        EmployeeService.Update(_employeeEdit);
         _employee = EmployeeService.GetEmployee(EmployeeId);
         _position = PositionService.GetPosition((int)_employee.PositionId);
         _department = DepartmentService.GetDepartment((int)_employee.DepartmentId);
