--- a/HRM/Shared/NavMenu.razor
+++ b/HRM/Shared/NavMenu.razor
@@ -8,19 +8,12 @@
 <div class="@NavMenuCssClass" @onclick="ToggleNavMenu">
     <ul class="nav flex-column">
         <li class="nav-item px-3">
-            <NavLink class="nav-link" href="" Match="NavLinkMatch.All">
-                <span class="oi oi-home" aria-hidden="true"></span> Home
-            </NavLink>
-        </li>
-        <li class="nav-item px-3">
-            <NavLink class="nav-link" href="counter">
-                <span class="oi oi-plus" aria-hidden="true"></span> Counter
-            </NavLink>
-        </li>
-        <li class="nav-item px-3">
-            <NavLink class="nav-link" href="fetchdata">
-                <span class="oi oi-list-rich" aria-hidden="true"></span> Fetch data
-            </NavLink>
+            <MudNavGroup Title="Quản lý" Style="color:white">
+                <MudNavGroup Title="Nhân viên" Style="color:white">
+                    <MudNavLink Href="/management/list-employees">Danh sách nhân viên</MudNavLink>
+                </MudNavGroup>
+                <MudNavLink Href="/management/configuration">Cấu hình</MudNavLink>
+            </MudNavGroup>
         </li>
     </ul>
 </div>
